<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_set_timer"
        android:text="@string/btn_set_timer"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_add_cal_event"
        android:text="@string/btn_add_calendar_event"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/btn_set_timer"/>

    <EditText
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/text_event_name"
        android:layout_toEndOf="@id/btn_add_cal_event"
        android:layout_below="@+id/btn_set_timer"
        android:hint="@string/hint_add_event_name_title"
        android:textSize="16sp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_record_video"
        android:text="@string/btn_record_video"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/btn_add_cal_event"/>

    <VideoView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:id="@+id/video_view"
        android:layout_marginTop="8dp"
        android:layout_below="@id/btn_record_video"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_select_contact"
        android:text="@string/btn_select_contact"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/video_view"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_contact_result"
        android:layout_toEndOf="@+id/btn_select_contact"
        android:layout_below="@+id/video_view"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:textSize="24dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_search"
        android:text="@string/btn_search"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/btn_select_contact" />

    <EditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:id="@+id/text_search"
        android:layout_toEndOf="@+id/btn_search"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:inputType="text"
        android:hint="Type Search Query String"
        android:layout_below="@+id/btn_select_contact"/>

</RelativeLayout>